--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,29 @@
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
+    # Redirige todo HTTP a HTTPS
+    return 301 https://$host$request_uri;
+}
 
-  root /usr/share/nginx/html;
-  index index.html;
+server {
+    listen 443 ssl;
+    server_name app.xaamira.abrdns.com;
 
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
+    # Certificados montados desde el Secret de Kubernetes
+    ssl_certificate     /etc/nginx/ssl/tls.crt;
+    ssl_certificate_key /etc/nginx/ssl/tls.key;
 
-  error_page 404 /index.html;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location / {
+        try_files $uri /index.html;
+    }
+
+    # Archivos estáticos (por las dudas)
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
+    }
 }
